syntax = "proto3";

package metrics;

option go_package = "github.com/metorial/sentinel/proto";

service MetricsCollector {
  rpc StreamMetrics(stream AgentMessage) returns (stream CollectorMessage);
}

message HostMetrics {
  string hostname = 1;
  string ip = 2;
  int64 timestamp = 3;

  HostInfo info = 4;
  ResourceUsage usage = 5;
}

message HostInfo {
  int64 uptime_seconds = 1;
  int32 cpu_cores = 2;
  int64 total_memory_bytes = 3;
  int64 total_storage_bytes = 4;
}

message ResourceUsage {
  double cpu_percent = 1;
  int64 used_memory_bytes = 2;
  int64 used_storage_bytes = 3;
}

message Acknowledgment {
  bool success = 1;
  string message = 2;
}

// Wrapper for messages from agent to collector
message AgentMessage {
  oneof payload {
    HostMetrics metrics = 1;
  }
}

// Wrapper for messages from collector to agent
message CollectorMessage {
  oneof payload {
    Acknowledgment ack = 1;
  }
}
